--- a/src/styles/blocks/_pagination.scss
+++ b/src/styles/blocks/_pagination.scss
@@ -7,8 +7,7 @@
     padding: rem($tick);
     color: $color--minor;
 
-    &:hover,
-    &:focus {
+    &:hover {
       color: $color--accent;
     }
   }
