--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,18 @@
 @import '../../bower_components/normalize.css/normalize.css';
-@import 'setup/*.scss';
-@import 'common/*.scss';
-@import 'blocks/*.scss';
+@import 'setup/mixins.scss';
+@import 'setup/variables.scss';
+@import 'common/base.scss';
+@import 'common/extendables.scss';
+@import 'blocks/colors.scss';
+@import 'blocks/download.scss';
+@import 'blocks/sizes.scss';
+@import 'blocks/footer.scss';
+@import 'blocks/header.scss';
+@import 'blocks/main.scss';
+@import 'blocks/notes.scss';
+@import 'blocks/option.scss';
+@import 'blocks/pagination.scss';
+@import 'blocks/post.scss';
+@import 'blocks/preview.scss';
+@import 'blocks/share.scss';
+@import 'blocks/top.scss';
