--- a/src/styles/blocks/_preview.scss
+++ b/src/styles/blocks/_preview.scss
@@ -1,3 +1,25 @@
 .preview {
+  position: relative;
+  overflow: hidden;
 
+  &__image {
+  }
+
+  &__details {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    background: rgba(#fff, .95);
+    transition: opacity 500ms ease-out;
+  }
+
+  &:hover &__image {
+  }
+
+  &:hover &__details {
+    opacity: 1;
+  }
 }
