--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@
 @import 'blocks/colors.scss';
 @import 'blocks/download.scss';
 @import 'blocks/sizes.scss';
+@import 'blocks/sizes-overlay.scss';
 @import 'blocks/footer.scss';
 @import 'blocks/header.scss';
 @import 'blocks/main.scss';
