--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,5 +15,6 @@
 @import 'blocks/pagination.scss';
 @import 'blocks/post.scss';
 @import 'blocks/preview.scss';
+@import 'blocks/posts-overlay.scss';
 @import 'blocks/share.scss';
 @import 'blocks/top.scss';
