--- a/src/templates/generator.html
+++ b/src/templates/generator.html
@@ -44,6 +44,238 @@
             </article>
           </div>
         </div>
+        <section class="posts-overlay">
+          <a href="#" class="sizes-overlay__close">
+            <i class="fa fa-times"></i>
+          </a>
+          <ul class="posts-overlay__list">
+            <li>
+              <a href="#">
+                <img src="http://40.media.tumblr.com/9a4b49c8bee12782ed003fecedfd1094/tumblr_nsexw97DJq1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://41.media.tumblr.com/652cf047d9d16efca1207b911b384934/tumblr_ns9dletkTV1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://40.media.tumblr.com/5e185684788190ca774471d8b5e37991/tumblr_ns7k8kjQ1Z1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://40.media.tumblr.com/d6fe3193b7215a9d21cbc315a5562316/tumblr_ns5ky5ZAVc1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://41.media.tumblr.com/7c3d0b5d950fc828addbee24dd9d6d16/tumblr_ns3u4ujhz91upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://36.media.tumblr.com/7a7ad336b099e0d8c3dc4eea1bba0fd8/tumblr_ns254au88C1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://41.media.tumblr.com/9218540bd487e6e9e10252e3f7480ed6/tumblr_nrykph8zS81upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://40.media.tumblr.com/b8239cae0f489c27fd8e1621546af62c/tumblr_nruqooFZbz1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://41.media.tumblr.com/0a0520d6ddb09106611b5773a0a7b920/tumblr_nrlqli9R621upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://41.media.tumblr.com/0a460ac81e7144191355118918630eda/tumblr_nrlqhpTAWu1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://41.media.tumblr.com/15231b624228f19b2aa58b3063e7e7de/tumblr_nrl53ccoNC1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://41.media.tumblr.com/a0d3cfbf576273221865ff0585bb2c1a/tumblr_nrh4sc7M2z1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://41.media.tumblr.com/e6c6d69589ad604f9babc19232d00367/tumblr_nreycv7kat1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://41.media.tumblr.com/3131a8065770cfca184bca3d5db57d4f/tumblr_nrc41rOy361upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://41.media.tumblr.com/1114d60c27a30cc50af212ee246ec41f/tumblr_nracc9GXfo1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://40.media.tumblr.com/e7f480f16edde4e0882294ae12f3364f/tumblr_nr88mqkxTD1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://41.media.tumblr.com/d2c13c746e19efa9e2e7abfd604f04d6/tumblr_nr6ejtNepG1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://36.media.tumblr.com/7470f8f6ea13d0a9bddf5434e5e8f8ba/tumblr_nr4nzhiM481upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://41.media.tumblr.com/57499440bd7ccf040035a95e9aba5371/tumblr_nr2skeB2io1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://40.media.tumblr.com/ac6ffc764b305a176c57574620364301/tumblr_nr10gfSPYA1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://36.media.tumblr.com/6cf69b5240c67da3f9b6ca07eaf3efe0/tumblr_nqk6bzlbsO1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://40.media.tumblr.com/9468cb2f8fb4054fb1693d170b86fedd/tumblr_nqiopsuj041upn40oo1_r1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://40.media.tumblr.com/bba9f86217f42c8a55ed9d0d659922dd/tumblr_nqgw1tMqQB1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://36.media.tumblr.com/da9bbafa030873fe9029a4b1b4b48721/tumblr_nqezouCW9Y1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://40.media.tumblr.com/00207ab4c2f48f64dda28dc9dbe5e2a5/tumblr_nqcv0d5SOs1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://40.media.tumblr.com/84038769dc05217742cebbe7bc820d34/tumblr_nqbbpz5jf11upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://41.media.tumblr.com/471ffac7381e24a1e35a3a95a25a08df/tumblr_nq96g64hqZ1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://40.media.tumblr.com/86969ed803e44734927ae0f9e4a9cbfd/tumblr_nq7bobgLDz1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://36.media.tumblr.com/3282f930f2bc999b4479617948c85494/tumblr_nq5ga97Fnc1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://41.media.tumblr.com/c7a9162a620d4d97b8b52e638aece162/tumblr_npnx5wuGTw1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://36.media.tumblr.com/b11f094e2eafa8070e0b28f244f22600/tumblr_npm6cijgRl1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://40.media.tumblr.com/9162eedf243d118c71231004a646b95a/tumblr_npkc9l5rIJ1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://40.media.tumblr.com/e76faba98fa073a7e96020ca55b1c1ef/tumblr_npijo7CF031upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://41.media.tumblr.com/f033028a1c2c0456896c9faacf6611be/tumblr_npgomp8s5j1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://41.media.tumblr.com/2791b74198f8cf3486ef6bcb14c0567f/tumblr_npeseosQnh1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://41.media.tumblr.com/1c9b5384bee7368c3f6108cc1a025b11/tumblr_npcvj2bkdl1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://40.media.tumblr.com/ac6550204ee435efd9cef6153133e8cd/tumblr_npa0wonfmm1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://41.media.tumblr.com/146c89cc533f689cb72a005292afad0f/tumblr_np849sHxz61upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://40.media.tumblr.com/1585dbeede2a51912e88c83d1f6d375b/tumblr_np6e100wWX1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://41.media.tumblr.com/4bc3af0f7c39a5eac5bfab607f8910d7/tumblr_np4h4mb15T1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://40.media.tumblr.com/e7c046a9c8de8788aa1a8746923b3f2b/tumblr_np2eyfXyA91upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://41.media.tumblr.com/0c100ca7cccc3dd6d16ecc1e7e9601cd/tumblr_np0q99jcoO1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://40.media.tumblr.com/a17da38004bef6f52c3f3bc1df04ec05/tumblr_noyyy2Cato1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://41.media.tumblr.com/b84a924fee157a99eb0c466dfce74c87/tumblr_nox52cSxlt1upn40oo1_1280.jpg">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="http://41.media.tumblr.com/8dbe010c9b5c561f9bff42343b103705/tumblr_novic85CTg1upn40oo1_1280.jpg">
+              </a>
+            </li>
+          </ul>
+        </section>
       </div>
 
       <div class="main__options">
