--- a/src/styles/common/_extendables.scss
+++ b/src/styles/common/_extendables.scss
@@ -125,10 +125,13 @@
   bottom: 0;
   left: 0;
   background: rgba(#fff, 0.98);
+}
 
-  &__close {
-    position: absolute;
-    top: rem($tick * 2);
-    right: rem($tick * 2);
-  }
+%overlay-close {
+  position: absolute;
+  top: rem($tick);
+  right: rem($tick);
+  font-size: rem(24px);
+  padding: rem($tick);
+  margin: rem(-$tick);
 }
