--- a/src/styles/setup/_mixins.scss
+++ b/src/styles/setup/_mixins.scss
@@ -21,3 +21,7 @@
 @function rem($size--desired) {
   @return ($size--desired / $size--base) * 1rem;
 }
+
+@function trans($property, $duration: $duration--base, $easing: ease-in-out) {
+  @return #{$property $duration $easing};
+}
