--- a/src/templates/generator.html
+++ b/src/templates/generator.html
@@ -313,127 +313,127 @@
               <span>1280x800 <em>(detected)</em></span>
               <i class="fa fa-bars"></i>
             </div>
-            <section class="sizes-overlay">
-              <a href="#" class="sizes-overlay__close">
-                <i class="fa fa-times"></i>
-              </a>
-              <section class="sizes-overlay__group">
-                <h3 class="sizes-overlay__group__heading">
-                  <i class="fa fa-mobile-phone"></i>
-                  Smartphone
-                </h3>
-                <label>
-                  <input type="radio" name="size" value="1">
-                  <span>1136x640</span>
-                  <em>iPhone 5</em>
-                </label>
-                <label>
-                  <input type="radio" name="size" value="2">
-                  <span>1334x750</span>
-                  <em>iPhone 6</em>
-                </label>
-                <label>
-                  <input type="radio" name="size" value="1">
-                  <span>1920x1080</span>
-                  <em>iPhone 6 Plus</em>
-                </label>
-              </section>
-              <section class="sizes-overlay__group">
-                <h3 class="sizes-overlay__group__heading">
-                  <i class="fa fa-tablet"></i>
-                  Tablet
-                </h3>
-                <label>
-                  <input type="radio" name="size" value="1">
-                  <span>1024x768</span>
-                </label>
-                <label>
-                  <input type="radio" name="size" value="1">
-                  <span>2048x1536</span>
-                  <em>iPad</em>
-                </label>
-                <label>
-                  <input type="radio" name="size" value="2">
-                  <span>2732x2048</span>
-                  <em>iPad Pro</em>
-                </label>
-              </section>
-              <section class="sizes-overlay__group">
-                <h3 class="sizes-overlay__group__heading">
-                  <i class="fa fa-laptop"></i>
-                  Laptop
-                </h3>
-                <label>
-                  <input type="radio" name="size" value="1">
-                  <span>1280x800</span>
-                </label>
-                <label>
-                  <input type="radio" name="size" value="1">
-                  <span>1280x1024</span>
-                </label>
-                <label>
-                  <input type="radio" name="size" value="2">
-                  <span>1366x768</span>
-                </label>
-                <label>
-                  <input type="radio" name="size" value="2">
-                  <span>1440x900</span>
-                </label>
-                <label>
-                  <input type="radio" name="size" value="1">
-                  <span>2560x1600</span>
-                  <em>rMBP 13&Prime;</em>
-                </label>
-                <label>
-                  <input type="radio" name="size" value="1">
-                  <span>2880x1800</span>
-                  <em>rMBP 15&Prime;</em>
-                </label>
-              </section>
-              <section class="sizes-overlay__group">
-                <h3 class="sizes-overlay__group__heading">
-                  <i class="fa fa-desktop"></i>
-                  Desktop 16:9
-                </h3>
-                <label>
-                  <input type="radio" name="size" value="1">
-                  <span>1920x1080</span>
-                </label>
-              </section>
-              <section class="sizes-overlay__group">
-                <h3 class="sizes-overlay__group__heading">
-                  <i class="fa fa-desktop"></i>
-                  Desktop 16:10
-                </h3>
-                <label>
-                  <input type="radio" name="size" value="1">
-                  <span>1920x1200</span>
-                </label>
-                <label>
-                  <input type="radio" name="size" value="1">
-                  <span>4096x2304</span>
-                  <em>iMac Retina 21&Prime;</em>
-                </label>
-                <label>
-                  <input type="radio" name="size" value="2">
-                  <span>5120x2880</span>
-                  <em>iMac Retina 27&Prime;</em>
-                </label>
-              </section>
-              <section class="sizes-overlay__group">
-                <h3 class="sizes-overlay__group__heading">
-                  <i class="fa fa-desktop"></i>
-                  Desktop 4:3
-                </h3>
-                <label>
-                  <input type="radio" name="size" value="2">
-                  <span>1024x768</span>
-                </label>
-                <label>
-                  <input type="radio" name="size" value="1">
-                  <span>1600x1200</span>
-                </label>
-              </section>
+            <section class="overlay">
+              <a href="#" class="overlay__close"></a>
+              <div class="overlay__body sizes-overlay">
+                <section class="sizes-overlay__group">
+                  <h3 class="sizes-overlay__group__heading">
+                    <i class="fa fa-mobile-phone"></i>
+                    Smartphone
+                  </h3>
+                  <label>
+                    <input type="radio" name="size" value="1">
+                    <span>1136x640</span>
+                    <em>iPhone 5</em>
+                  </label>
+                  <label>
+                    <input type="radio" name="size" value="2">
+                    <span>1334x750</span>
+                    <em>iPhone 6</em>
+                  </label>
+                  <label>
+                    <input type="radio" name="size" value="1">
+                    <span>1920x1080</span>
+                    <em>iPhone 6 Plus</em>
+                  </label>
+                </section>
+                <section class="sizes-overlay__group">
+                  <h3 class="sizes-overlay__group__heading">
+                    <i class="fa fa-tablet"></i>
+                    Tablet
+                  </h3>
+                  <label>
+                    <input type="radio" name="size" value="1">
+                    <span>1024x768</span>
+                  </label>
+                  <label>
+                    <input type="radio" name="size" value="1">
+                    <span>2048x1536</span>
+                    <em>iPad</em>
+                  </label>
+                  <label>
+                    <input type="radio" name="size" value="2">
+                    <span>2732x2048</span>
+                    <em>iPad Pro</em>
+                  </label>
+                </section>
+                <section class="sizes-overlay__group">
+                  <h3 class="sizes-overlay__group__heading">
+                    <i class="fa fa-laptop"></i>
+                    Laptop
+                  </h3>
+                  <label>
+                    <input type="radio" name="size" value="1">
+                    <span>1280x800</span>
+                  </label>
+                  <label>
+                    <input type="radio" name="size" value="1">
+                    <span>1280x1024</span>
+                  </label>
+                  <label>
+                    <input type="radio" name="size" value="2">
+                    <span>1366x768</span>
+                  </label>
+                  <label>
+                    <input type="radio" name="size" value="2">
+                    <span>1440x900</span>
+                  </label>
+                  <label>
+                    <input type="radio" name="size" value="1">
+                    <span>2560x1600</span>
+                    <em>rMBP 13&Prime;</em>
+                  </label>
+                  <label>
+                    <input type="radio" name="size" value="1">
+                    <span>2880x1800</span>
+                    <em>rMBP 15&Prime;</em>
+                  </label>
+                </section>
+                <section class="sizes-overlay__group">
+                  <h3 class="sizes-overlay__group__heading">
+                    <i class="fa fa-desktop"></i>
+                    Desktop 16:9
+                  </h3>
+                  <label>
+                    <input type="radio" name="size" value="1">
+                    <span>1920x1080</span>
+                  </label>
+                </section>
+                <section class="sizes-overlay__group">
+                  <h3 class="sizes-overlay__group__heading">
+                    <i class="fa fa-desktop"></i>
+                    Desktop 16:10
+                  </h3>
+                  <label>
+                    <input type="radio" name="size" value="1">
+                    <span>1920x1200</span>
+                  </label>
+                  <label>
+                    <input type="radio" name="size" value="1">
+                    <span>4096x2304</span>
+                    <em>iMac Retina 21&Prime;</em>
+                  </label>
+                  <label>
+                    <input type="radio" name="size" value="2">
+                    <span>5120x2880</span>
+                    <em>iMac Retina 27&Prime;</em>
+                  </label>
+                </section>
+                <section class="sizes-overlay__group">
+                  <h3 class="sizes-overlay__group__heading">
+                    <i class="fa fa-desktop"></i>
+                    Desktop 4:3
+                  </h3>
+                  <label>
+                    <input type="radio" name="size" value="2">
+                    <span>1024x768</span>
+                  </label>
+                  <label>
+                    <input type="radio" name="size" value="1">
+                    <span>1600x1200</span>
+                  </label>
+                </section>
+              </div>
             </section>
           </div>
         </section>
