--- a/src/styles/blocks/_preview.scss
+++ b/src/styles/blocks/_preview.scss
@@ -13,7 +13,7 @@
     left: 0;
     opacity: 0;
     background: rgba(#fff, .95);
-    transition: opacity 500ms ease-out;
+    transition: trans(opacity, $duration--ease);
   }
 
   &:hover &__image {
