--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import 'setup/variables.scss';
 @import 'common/base.scss';
 @import 'common/extendables.scss';
+@import 'blocks/overlay.scss';
 @import 'blocks/colors.scss';
 @import 'blocks/download.scss';
 @import 'blocks/sizes.scss';
