--- a/src/styles/blocks/_posts-overlay.scss
+++ b/src/styles/blocks/_posts-overlay.scss
@@ -1,26 +1,31 @@
 .posts-overlay {
-  display: none;
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
 
-  &__list {
-    display: flex;
-    flex-wrap: wrap;
-    padding: rem($tick * 3);
-    list-style: none;
+  li {
+    box-sizing: border-box;
+    flex-basis: 20%;
+    padding: rem(5px);
+  }
 
-    li {
-      box-sizing: border-box;
-      flex-basis: 20%;
-      padding: rem(5px);
+  a {
+    display: block;
+    position: relative;
+    transition: trans(opacity);
+    opacity: 1;
+    padding-top: 100%;
+
+    &:hover {
+      opacity: 0.5;
     }
+  }
 
-    a {
-      display: block;
-      transition: trans(opacity);
-      opacity: 1;
-
-      &:hover {
-        opacity: 0.5;
-      }
-    }
+  img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
   }
 }
