--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import '../../bower_components/normalize.css/normalize.css';
 @import 'setup/mixins.scss';
 @import 'setup/variables.scss';
+@import 'common/animations.scss';
 @import 'common/base.scss';
 @import 'common/extendables.scss';
 @import 'blocks/overlay.scss';
@@ -19,3 +20,4 @@
 @import 'blocks/posts-overlay.scss';
 @import 'blocks/share.scss';
 @import 'blocks/top.scss';
+@import 'blocks/loader.scss';
