--- a/src/templates/generator.html
+++ b/src/templates/generator.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="//assets.ubermost.com/images/favicon.png">
     <link href="styles/main.min.css" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
-    <script src="scripts/modernizr.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   </head>
   <body>
     <header class="header">
@@ -30,7 +30,8 @@
     <main class="main">
       <div class="main__preview">
         <div class="preview">
-          <img src="//40.media.tumblr.com/d6fe3193b7215a9d21cbc315a5562316/tumblr_ns5ky5ZAVc1upn40oo1_1280.jpg" alt="" class="preview__image">
+          <!-- <img src="//40.media.tumblr.com/d6fe3193b7215a9d21cbc315a5562316/tumblr_ns5ky5ZAVc1upn40oo1_1280.jpg" alt="" class="preview__image"> -->
+          <img src="http://36.media.tumblr.com/8a07bc86c136261c7f952b0a05824604/tumblr_nrsse6YWLP1upn40oo1_1280.jpg" alt="" class="preview__image">
           <div class="preview__details">
             <article class="post">
               <div class="post__text">
@@ -44,237 +45,10 @@
             </article>
           </div>
         </div>
-        <section class="posts-overlay">
-          <a href="#" class="sizes-overlay__close">
-            <i class="fa fa-times"></i>
-          </a>
-          <ul class="posts-overlay__list">
-            <li>
-              <a href="#">
-                <img src="http://40.media.tumblr.com/9a4b49c8bee12782ed003fecedfd1094/tumblr_nsexw97DJq1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://41.media.tumblr.com/652cf047d9d16efca1207b911b384934/tumblr_ns9dletkTV1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://40.media.tumblr.com/5e185684788190ca774471d8b5e37991/tumblr_ns7k8kjQ1Z1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://40.media.tumblr.com/d6fe3193b7215a9d21cbc315a5562316/tumblr_ns5ky5ZAVc1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://41.media.tumblr.com/7c3d0b5d950fc828addbee24dd9d6d16/tumblr_ns3u4ujhz91upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://36.media.tumblr.com/7a7ad336b099e0d8c3dc4eea1bba0fd8/tumblr_ns254au88C1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://41.media.tumblr.com/9218540bd487e6e9e10252e3f7480ed6/tumblr_nrykph8zS81upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://40.media.tumblr.com/b8239cae0f489c27fd8e1621546af62c/tumblr_nruqooFZbz1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://41.media.tumblr.com/0a0520d6ddb09106611b5773a0a7b920/tumblr_nrlqli9R621upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://41.media.tumblr.com/0a460ac81e7144191355118918630eda/tumblr_nrlqhpTAWu1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://41.media.tumblr.com/15231b624228f19b2aa58b3063e7e7de/tumblr_nrl53ccoNC1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://41.media.tumblr.com/a0d3cfbf576273221865ff0585bb2c1a/tumblr_nrh4sc7M2z1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://41.media.tumblr.com/e6c6d69589ad604f9babc19232d00367/tumblr_nreycv7kat1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://41.media.tumblr.com/3131a8065770cfca184bca3d5db57d4f/tumblr_nrc41rOy361upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://41.media.tumblr.com/1114d60c27a30cc50af212ee246ec41f/tumblr_nracc9GXfo1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://40.media.tumblr.com/e7f480f16edde4e0882294ae12f3364f/tumblr_nr88mqkxTD1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://41.media.tumblr.com/d2c13c746e19efa9e2e7abfd604f04d6/tumblr_nr6ejtNepG1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://36.media.tumblr.com/7470f8f6ea13d0a9bddf5434e5e8f8ba/tumblr_nr4nzhiM481upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://41.media.tumblr.com/57499440bd7ccf040035a95e9aba5371/tumblr_nr2skeB2io1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://40.media.tumblr.com/ac6ffc764b305a176c57574620364301/tumblr_nr10gfSPYA1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://36.media.tumblr.com/6cf69b5240c67da3f9b6ca07eaf3efe0/tumblr_nqk6bzlbsO1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://40.media.tumblr.com/9468cb2f8fb4054fb1693d170b86fedd/tumblr_nqiopsuj041upn40oo1_r1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://40.media.tumblr.com/bba9f86217f42c8a55ed9d0d659922dd/tumblr_nqgw1tMqQB1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://36.media.tumblr.com/da9bbafa030873fe9029a4b1b4b48721/tumblr_nqezouCW9Y1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://40.media.tumblr.com/00207ab4c2f48f64dda28dc9dbe5e2a5/tumblr_nqcv0d5SOs1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://40.media.tumblr.com/84038769dc05217742cebbe7bc820d34/tumblr_nqbbpz5jf11upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://41.media.tumblr.com/471ffac7381e24a1e35a3a95a25a08df/tumblr_nq96g64hqZ1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://40.media.tumblr.com/86969ed803e44734927ae0f9e4a9cbfd/tumblr_nq7bobgLDz1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://36.media.tumblr.com/3282f930f2bc999b4479617948c85494/tumblr_nq5ga97Fnc1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://41.media.tumblr.com/c7a9162a620d4d97b8b52e638aece162/tumblr_npnx5wuGTw1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://36.media.tumblr.com/b11f094e2eafa8070e0b28f244f22600/tumblr_npm6cijgRl1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://40.media.tumblr.com/9162eedf243d118c71231004a646b95a/tumblr_npkc9l5rIJ1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://40.media.tumblr.com/e76faba98fa073a7e96020ca55b1c1ef/tumblr_npijo7CF031upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://41.media.tumblr.com/f033028a1c2c0456896c9faacf6611be/tumblr_npgomp8s5j1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://41.media.tumblr.com/2791b74198f8cf3486ef6bcb14c0567f/tumblr_npeseosQnh1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://41.media.tumblr.com/1c9b5384bee7368c3f6108cc1a025b11/tumblr_npcvj2bkdl1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://40.media.tumblr.com/ac6550204ee435efd9cef6153133e8cd/tumblr_npa0wonfmm1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://41.media.tumblr.com/146c89cc533f689cb72a005292afad0f/tumblr_np849sHxz61upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://40.media.tumblr.com/1585dbeede2a51912e88c83d1f6d375b/tumblr_np6e100wWX1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://41.media.tumblr.com/4bc3af0f7c39a5eac5bfab607f8910d7/tumblr_np4h4mb15T1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://40.media.tumblr.com/e7c046a9c8de8788aa1a8746923b3f2b/tumblr_np2eyfXyA91upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://41.media.tumblr.com/0c100ca7cccc3dd6d16ecc1e7e9601cd/tumblr_np0q99jcoO1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://40.media.tumblr.com/a17da38004bef6f52c3f3bc1df04ec05/tumblr_noyyy2Cato1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://41.media.tumblr.com/b84a924fee157a99eb0c466dfce74c87/tumblr_nox52cSxlt1upn40oo1_1280.jpg">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="http://41.media.tumblr.com/8dbe010c9b5c561f9bff42343b103705/tumblr_novic85CTg1upn40oo1_1280.jpg">
-              </a>
-            </li>
-          </ul>
+        <section class="overlay">
+          <a href="#" class="overlay__close"></a>
+          <span class="loader"></span>
+          <ul class="overlay__body posts-overlay" data-source="media/posts.json"></ul>
         </section>
       </div>
 
@@ -315,7 +89,7 @@
             </div>
             <section class="overlay">
               <a href="#" class="overlay__close"></a>
-              <div class="overlay__body sizes-overlay">
+              <div class="overlay__body overlay__body--scale sizes-overlay">
                 <section class="sizes-overlay__group">
                   <h3 class="sizes-overlay__group__heading">
                     <i class="fa fa-mobile-phone"></i>
@@ -323,18 +97,15 @@
                   </h3>
                   <label>
                     <input type="radio" name="size" value="1">
-                    <span>1136x640</span>
-                    <em>iPhone 5</em>
+                    <span>1136x640 <em>iPhone 5</em></span>
                   </label>
                   <label>
                     <input type="radio" name="size" value="2">
-                    <span>1334x750</span>
-                    <em>iPhone 6</em>
+                    <span>1334x750 <em>iPhone 6</em></span>
                   </label>
                   <label>
-                    <input type="radio" name="size" value="1">
-                    <span>1920x1080</span>
-                    <em>iPhone 6 Plus</em>
+                    <input type="radio" name="size" value="3">
+                    <span>1920x1080 <em>iPhone 6 Plus</em></span>
                   </label>
                 </section>
                 <section class="sizes-overlay__group">
@@ -343,18 +114,16 @@
                     Tablet
                   </h3>
                   <label>
-                    <input type="radio" name="size" value="1">
+                    <input type="radio" name="size" value="4">
                     <span>1024x768</span>
                   </label>
                   <label>
-                    <input type="radio" name="size" value="1">
-                    <span>2048x1536</span>
-                    <em>iPad</em>
+                    <input type="radio" name="size" value="5">
+                    <span>2048x1536 <em>iPad</em></span>
                   </label>
                   <label>
-                    <input type="radio" name="size" value="2">
-                    <span>2732x2048</span>
-                    <em>iPad Pro</em>
+                    <input type="radio" name="size" value="6">
+                    <span>2732x2048 <em>iPad Pro</em></span>
                   </label>
                 </section>
                 <section class="sizes-overlay__group">
@@ -363,30 +132,28 @@
                     Laptop
                   </h3>
                   <label>
-                    <input type="radio" name="size" value="1">
+                    <input type="radio" name="size" value="7">
                     <span>1280x800</span>
                   </label>
                   <label>
-                    <input type="radio" name="size" value="1">
+                    <input type="radio" name="size" value="8">
                     <span>1280x1024</span>
                   </label>
                   <label>
-                    <input type="radio" name="size" value="2">
+                    <input type="radio" name="size" value="9">
                     <span>1366x768</span>
                   </label>
                   <label>
-                    <input type="radio" name="size" value="2">
+                    <input type="radio" name="size" value="10">
                     <span>1440x900</span>
                   </label>
                   <label>
-                    <input type="radio" name="size" value="1">
-                    <span>2560x1600</span>
-                    <em>rMBP 13&Prime;</em>
+                    <input type="radio" name="size" value="11">
+                    <span>2560x1600 <em>rMBP 13&Prime;</em></span>
                   </label>
                   <label>
-                    <input type="radio" name="size" value="1">
-                    <span>2880x1800</span>
-                    <em>rMBP 15&Prime;</em>
+                    <input type="radio" name="size" value="12">
+                    <span>2880x1800 <em>rMBP 15&Prime;</em></span>
                   </label>
                 </section>
                 <section class="sizes-overlay__group">
@@ -395,7 +162,7 @@
                     Desktop 16:9
                   </h3>
                   <label>
-                    <input type="radio" name="size" value="1">
+                    <input type="radio" name="size" value="13">
                     <span>1920x1080</span>
                   </label>
                 </section>
@@ -405,18 +172,16 @@
                     Desktop 16:10
                   </h3>
                   <label>
-                    <input type="radio" name="size" value="1">
+                    <input type="radio" name="size" value="14">
                     <span>1920x1200</span>
                   </label>
                   <label>
-                    <input type="radio" name="size" value="1">
-                    <span>4096x2304</span>
-                    <em>iMac Retina 21&Prime;</em>
+                    <input type="radio" name="size" value="15">
+                    <span>4096x2304 <em>iMac Retina 21&Prime;</em></span>
                   </label>
                   <label>
-                    <input type="radio" name="size" value="2">
-                    <span>5120x2880</span>
-                    <em>iMac Retina 27&Prime;</em>
+                    <input type="radio" name="size" value="16">
+                    <span>5120x2880 <em>iMac Retina 27&Prime;</em></span>
                   </label>
                 </section>
                 <section class="sizes-overlay__group">
@@ -425,11 +190,11 @@
                     Desktop 4:3
                   </h3>
                   <label>
-                    <input type="radio" name="size" value="2">
+                    <input type="radio" name="size" value="17">
                     <span>1024x768</span>
                   </label>
                   <label>
-                    <input type="radio" name="size" value="1">
+                    <input type="radio" name="size" value="18">
                     <span>1600x1200</span>
                   </label>
                 </section>
@@ -453,10 +218,41 @@
     <footer class="footer">
       <div class="footer__body">
         <p class="footer__body__about">Create inspiring wallpaper from your favourite lettering!</p>
-        <small class="footer__body__copy">Part of the <a href="http://ubermost.com">Ubermost</a> website. Built by <a href="http://lamberski.com">Maciej Lamberski</a>.</small>
+        <small class="footer__body__copy">Part of the <a href="http://ubermost.com">Ubermost</a>. Built by <a href="http://lamberski.com">Maciej Lamberski</a>.</small>
       </div>
     </footer>
 
+    <script id="post-template" type="x-handlebars-template">
+      {% raw %}
+        <img src="{{picture}}" alt="" class="preview__image">
+        <div class="preview__details">
+          <article class="post">
+            <div class="post__text">
+              <blockquote>
+                {{quote}}
+                <footer>&#8213; <cite>{{author}}, {{source}}</cite></footer>
+              </blockquote>
+            </div>
+          </article>
+        </div>
+      {% endraw %}
+    </script>
+    <script id="posts-template" type="x-handlebars-template">
+      {% raw %}
+        {{#each posts}}
+          <li>
+            <a href="{{ID}}" data-id="{{ID}}">
+              <img src="{{thumbnail}}" alt="">
+            </a>
+          </li>
+        {{/each}}
+      {% endraw %}
+    </script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.0/handlebars.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.2.0/imagesloaded.pkgd.min.js"></script>
+    <script src="//cdn.jsdelivr.net/velocity/1.2.3/velocity.min.js"></script>
+    <script src="//cdn.jsdelivr.net/velocity/1.2.3/velocity.ui.min.js"></script>
     <script src="scripts/main.min.js"></script>
   </body>
 </html>
