Force square recentagle for .preview

--- a/src/templates/generator.html
+++ b/src/templates/generator.html
@@ -30,8 +30,7 @@
     <main class="main">
       <div class="main__preview">
         <div class="preview">
-          <!-- <img src="//40.media.tumblr.com/d6fe3193b7215a9d21cbc315a5562316/tumblr_ns5ky5ZAVc1upn40oo1_1280.jpg" alt="" class="preview__image"> -->
-          <img src="http://36.media.tumblr.com/8a07bc86c136261c7f952b0a05824604/tumblr_nrsse6YWLP1upn40oo1_1280.jpg" alt="" class="preview__image">
+          <img src="//40.media.tumblr.com/9a4b49c8bee12782ed003fecedfd1094/tumblr_nsexw97DJq1upn40oo1_1280.jpg" alt="" class="preview__image">
           <div class="preview__details">
             <article class="post">
               <div class="post__text">
@@ -44,6 +43,7 @@
               </div>
             </article>
           </div>
+          <span class="loader"></span>
         </div>
         <section class="overlay">
           <a href="#" class="overlay__close"></a>
