--- a/src/styles/blocks/_preview.scss
+++ b/src/styles/blocks/_preview.scss
@@ -1,8 +1,13 @@
 .preview {
   position: relative;
   overflow: hidden;
+  padding-top: 100%;
 
   &__image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
   }
 
   &__details {
